feature: added trainings support: db arch & queries, endpoints & swagger docs.
